<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reportExplain"
            android:textAlignment="center" />
        <CheckBox
            android:id="@+id/runnyNose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/runnyNose"/>
        <CheckBox
            android:id="@+id/coughing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coughing"/>
        <CheckBox
            android:id="@+id/sneezing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sneezing"/>
        <CheckBox
            android:id="@+id/headache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/headache"/>
        <CheckBox
            android:id="@+id/fatigue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fatigue"/>
        <CheckBox
            android:id="@+id/musclePain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/musclePain"/>
        <CheckBox
            android:id="@+id/chestPain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chestPain"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/numberOfPeople"
            android:inputType="number"/>
        <Button
            android:id="@+id/confirmSelfReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmSelfReport"
            android:layout_gravity="center"/>
    </LinearLayout>
</RelativeLayout>